# wormhole_map_switcher

./: README.md  room1.pgm  room1.yaml  room2.pgm  room2.yaml
custom_msg/: CMakeLists.txt  package.xml
custom_msg/action/: NavigateToNamedPose.action
custom_msg/srv/: SavePose.srv  SaveWormhole.srv
multi_map_nav/: CMakeLists.txt  package.xml
multi_map_nav/include/multi_map_nav/: pose_saver_db.hpp  wormhole_db.hpp
multi_map_nav/src/: multi_map_action_server.cpp  pose_saver_db.cpp  save_pose_node.cpp  wormhole_db.cpp  wormhole_saver.cpp
multi_map_nav/srv/: SaveWormhole.srv
