<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_map_nav</name>
  <version>0.0.0</version>
  <description>Multi-map navigation with wormholes</description>
  <maintainer email="sakshamsaha1212@gmail.com">mendacium</maintainer>
  <license>MIT</license> <!-- Or choose the actual license you're using -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
<build_depend>action_msgs</build_depend>
<build_depend>rclcpp_action</build_depend>
<build_depend>nav2_msgs</build_depend>
<exec_depend>action_msgs</exec_depend>
<exec_depend>rclcpp_action</exec_depend>
<exec_depend>nav2_msgs</exec_depend>


  <!-- Add these -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
